Java 17 :)